--- a/2348538_LAB2.ipynb
+++ b/2348538_LAB2.ipynb
@@ -82,29 +82,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def verify_sqrt_not():\n",
-    "    # Create the quantum circuit to define R = HSH\n",
-    "    qc = QuantumCircuit(1)\n",
-    "    qc.h(0)  # Apply Hadamard\n",
-    "    qc.s(0)  # Apply S\n",
-    "    qc.h(0)  # Apply Hadamard again\n",
-    "\n",
-    "    # Get the matrix representation of R\n",
-    "    R = qc.to_gate(label='R')  # Convert the circuit to a gate\n",
-    "    R_matrix = R.to_matrix()  # Get the matrix representation\n",
-    "\n",
-    "    # Define sqrt(X) matrix explicitly\n",
-    "    sqrt_X = np.array([[1 + 1j, 1 - 1j], [1 - 1j, 1 + 1j]]) / 2\n",
-    "    \n",
-    "    # Compare matrices to see if they are approximately equal\n",
-    "    is_equal = np.allclose(R_matrix, sqrt_X)\n",
-    "    \n",
-    "    return is_equal, R_matrix, sqrt_X\n"
+    "## Drawing Circuit Layout"
    ]
   },
   {
@@ -140,6 +121,13 @@
     "\n",
     "# Draw the circuit using 'mpl' for Matplotlib rendering\n",
     "circuit.draw(output='mpl')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verifing R is sqrt(NOT)"
    ]
   },
   {
@@ -221,6 +209,13 @@
     "circuit.h(0)\n",
     "print(\"\\nQuantum circuit for R gate (H -> S -> H):\")\n",
     "print(circuit.draw(\"text\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulating R gate"
    ]
   },
   {
