--- a/2348538_LAB2.ipynb
+++ b/2348538_LAB2.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ***LAB 2***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Perform the operation X, Y, Z, H, S, T \n",
     "- Execute the operations on a state vector.\n",
     "- Draw a simple circuit for these operation.\n",
